feat : #83 Payment RedisCachingConfig 직렬화 수정
 - 기존의 설정에서는 LocalDateTime이 적용되지않았음
- jackson-datatype-jsr310 모듈 추가
- Redis용 ObjectMapper에 JavaTimeModule 및 Jdk8Module 등록
- DTO별 Jackson2JsonRedisSerializer 적용

--- a/com.taken_seat.payment-service/build.gradle
+++ b/com.taken_seat.payment-service/build.gradle
@@ -43,6 +43,8 @@ clean.doLast {
 
 dependencies {
 
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
     //queryDSL 의존성
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
