--- a/com.taken_seat.payment-service/build.gradle
+++ b/com.taken_seat.payment-service/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation project(':com.taken_seat.common-service')
     annotationProcessor project(':com.taken_seat.common-service')
 
+    // jackson
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
 
