refactor : #171 Kafka 기본 세팅 수정사항 최종본 및 메시지 producer, consumer 예시 입니다.

--- a/com.taken_seat.coupon-service/build.gradle
+++ b/com.taken_seat.coupon-service/build.gradle
@@ -41,14 +41,17 @@ clean.doLast {
 }
 
 dependencies {
-  implementation project(':com.taken_seat.common-service')
-  annotationProcessor project(':com.taken_seat.common-service')
+  	implementation project(':com.taken_seat.common-service')
+	annotationProcessor project(':com.taken_seat.common-service')
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+	implementation 'org.springframework.kafka:spring-kafka'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 
 	// db
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
