--- a/com.taken_seat.common-service/docker-compose.common.yml
+++ b/com.taken_seat.common-service/docker-compose.common.yml
@@ -29,7 +29,6 @@ services:
 
   kafka:
     image: wurstmeister/kafka:latest
-    platform: linux/amd64
     ports:
       - "9092:9092"
     environment:
@@ -38,8 +37,9 @@ services:
       KAFKA_LISTENERS: INSIDE://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
+    restart: always
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -71,6 +71,16 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - grafana-storage:/var/lib/grafana
+    restart: always
+
+  loki:
+    image: grafana/loki:3.0.0
+    container_name: loki
+    ports:
+      - "3100:3100"
+    volumes:
+      - ../loki-config.yml:/mnt/config/loki-config.yml
+    command: -config.file=/mnt/config/loki-config.yml
     restart: always
 
 volumes:
