--- a/com.taken_seat.common-service/build.gradle
+++ b/com.taken_seat.common-service/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
 
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
