--- a/com.taken_seat.auth-service/.gitignore
+++ b/com.taken_seat.auth-service/.gitignore
@@ -37,3 +37,8 @@ out/
 .vscode/
 
 **/application.yml
+
+*.jtl          # JMeter 결과 리포트
+*.log          # 테스트 중 생성된 로그
+
+tokens.csv     # User Token 테스트 파일 제외
