--- a/com.taken_seat.gateway-service/build.gradle
+++ b/com.taken_seat.gateway-service/build.gradle
@@ -22,6 +22,9 @@ ext {
 }
 
 dependencies {
+    // swagegr
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.7.0'
+
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'io.micrometer:micrometer-core'
