refactor : #245 <Coupon> kafka 인터페이스 생성 및 구현체 적용 향후 redisson 적용을 위한 의존성 추가
- kafka interface 생성 후 구현체 적용
- 향후 redisson 사용을 위한 의존성 추가

--- a/com.taken_seat.coupon-service/build.gradle
+++ b/com.taken_seat.coupon-service/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
 	implementation 'org.springframework.kafka:spring-kafka'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.41.0'
 
 	// db
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
