--- a/com.taken_seat.coupon-service/build.gradle
+++ b/com.taken_seat.coupon-service/build.gradle
@@ -44,6 +44,9 @@ dependencies {
   	implementation project(':com.taken_seat.common-service')
 	annotationProcessor project(':com.taken_seat.common-service')
 
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
