--- a/com.taken_seat.gateway-service/build.gradle
+++ b/com.taken_seat.gateway-service/build.gradle
@@ -25,10 +25,13 @@ dependencies {
     // swagegr
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.7.0'
 
+    // 모니터링
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'io.micrometer:micrometer-core'
+    // loki
     implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
+
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
