refactor : #272 <Auth> loki 사용을 위한 기능 추가
- logback-spring.xml추가
- 모니터링 의존성 추가

--- a/com.taken_seat.auth-service/build.gradle
+++ b/com.taken_seat.auth-service/build.gradle
@@ -48,12 +48,13 @@ dependencies {
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
     //queryDSL 의존성
@@ -75,6 +76,12 @@ dependencies {
 
     // loki
     implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
+    // 모니터링
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
