chore : #279 eureka 빌드 및 실행 테스트 수정 1

--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -30,6 +30,6 @@ jobs:
 
       - name: Eureka 서버 빌드
         run: |
-          ./gradlew :eureka:bootJar
-          java -jar com.devsquad10.eureka/build/libs/*.jar &  # 
+          ./gradlew :com.taken_seat.eureka-service:bootJar
+          java -jar com.taken_seat.eureka-service/build/libs/*.jar
           sleep 20
