--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Eureka 서버 빌드
         run: |
           ./gradlew :com.taken_seat.eureka-service:bootJar
-          java -jar com.taken_seat.eureka-service/build/libs/*.jar
+          java -jar com.taken_seat.eureka-service/build/libs/*.jar &
           sleep 20
