--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -33,3 +33,36 @@ jobs:
           ./gradlew :com.taken_seat.eureka-service:bootJar
           java -jar com.taken_seat.eureka-service/build/libs/*.jar &
           sleep 20
+
+  services:
+    runs-on: ubuntu-latest
+    needs: eureka  # Eureka가 실행된 후 실행
+    strategy:
+      matrix:
+        module:
+          - com.taken_seat.common-service
+          - com.taken_seat.auth-service
+          - com.taken_seat.coupon-service
+          - com.taken_seat.queue-service
+          - com.taken_seat.booking-service
+          - com.taken_seat.performance-service
+          - com.taken_seat.payment-service
+          - com.taken_seat.review-service
+      fail-fast: false
+      max-parallel: 2
+
+    steps:
+      - name: 소스 코드 체크아웃
+        uses: actions/checkout@v4
+
+      - name: JDK 17 설정
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Gradle 실행 권한 부여
+        run: chmod +x ./gradlew
+
+      - name: Gradle 빌드 (서비스 모듈)
+        run: ./gradlew :${{ matrix.module }}:build --parallel --no-daemon
