--- a/com.taken_seat.auth-service/build.gradle
+++ b/com.taken_seat.auth-service/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation project(':com.taken_seat.common-service')
     annotationProcessor project(':com.taken_seat.common-service')
 
+//    implementation('io.github.cdimascio:java-dotenv:5.2.2')
+
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
