--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -48,7 +48,7 @@ jobs:
           - com.taken_seat.payment-service
           - com.taken_seat.review-service
       fail-fast: false
-      max-parallel: 2
+      max-parallel:
 
     steps:
       - name: 소스 코드 체크아웃
