chore : #279 CI booking 테스트 주석 처리 (오타수정)
- 통합 테스트 환경 제외하고 빌드 테스트

--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -48,7 +48,7 @@ jobs:
           - com.taken_seat.payment-service
           - com.taken_seat.review-service
       fail-fast: false
-      max-parallel:
+      max-parallel: 5
 
     steps:
       - name: 소스 코드 체크아웃
