chore : #279 CI performance ci 오류 제거
- env 환경변수로 변경

--- a/com.taken_seat.performance-service/build.gradle
+++ b/com.taken_seat.performance-service/build.gradle
@@ -28,6 +28,7 @@ ext {
 }
 
 dependencies {
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 
     implementation project(':com.taken_seat.common-service')
     annotationProcessor project(':com.taken_seat.common-service')
