--- a/com.taken_seat.payment-service/src/main/resources/application.yml
+++ b/com.taken_seat.payment-service/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
       username: default
       password: systempass
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/takenseat
-    username: toolatebro
-    password: toolatebro
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 
   jpa:
     hibernate:
