--- a/com.taken_seat.gateway-service/src/main/resources/application.yml
+++ b/com.taken_seat.gateway-service/src/main/resources/application.yml
@@ -105,4 +105,9 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include:
+
+
+logging:
+  loki:
+    url: ${LOKI_URL}
