--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -74,3 +74,22 @@ jobs:
 
       - name: Gradle 빌드 (서비스 모듈)
         run: ./gradlew :${{ matrix.module }}:build --parallel --no-daemon
+
+  gateway:
+    runs-on: ubuntu-latest
+    needs: services  # 모든 서비스 모듈이 빌드된 후 실행
+    steps:
+      - name: 소스 코드 체크아웃
+        uses: actions/checkout@v4
+
+      - name: JDK 17 설정
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Gradle 실행 권한 부여
+        run: chmod +x ./gradlew
+
+      - name: Gradle 빌드 (Gateway)
+        run: ./gradlew :com.taken_seat.gateway-service:build --no-daemon
