chore : #279 CI env 인식 의존성 추가

--- a/com.taken_seat.booking-service/build.gradle
+++ b/com.taken_seat.booking-service/build.gradle
@@ -30,6 +30,8 @@ ext {
 dependencies {
     implementation project(':com.taken_seat.common-service')
     annotationProcessor project(':com.taken_seat.common-service')
+    
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
