--- a/com.taken_seat.review-service/build.gradle
+++ b/com.taken_seat.review-service/build.gradle
@@ -44,6 +44,8 @@ clean.doLast {
 
 dependencies {
 
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
     implementation project(':com.taken_seat.common-service')
     annotationProcessor project(':com.taken_seat.common-service')
 
