--- a/com.taken_seat.gateway-service/build.gradle
+++ b/com.taken_seat.gateway-service/build.gradle
@@ -22,6 +22,9 @@ ext {
 }
 
 dependencies {
+
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
     // swagegr
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.7.0'
 
