--- a/com.taken_seat.queue-service/build.gradle
+++ b/com.taken_seat.queue-service/build.gradle
@@ -25,6 +25,8 @@ repositories {
 
 dependencies {
 
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
     implementation project(':com.taken_seat.common-service')
     annotationProcessor project(':com.taken_seat.common-service')
 
