--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -45,7 +45,6 @@ eureka:
 
 kafka:
   topic:
-    benefit-payment-response: benefit.payment.response
     benefit-refund-request: benefit.refund.request
     benefit-refund-response: benefit.refund.response
     benefit-usage-request: benefit.usage.request
@@ -54,6 +53,7 @@ kafka:
     payment-refund-response: payment.refund.response
     payment-request: payment.request
     payment-response: payment.response
+    ticket-reissue-request: ticket.reissue.request
     ticket-request: ticket.request
   consumer:
     group-id:
