--- a/com.taken_seat.payment-service/src/main/resources/application.yml
+++ b/com.taken_seat.payment-service/src/main/resources/application.yml
@@ -23,6 +23,18 @@ spring:
     show-sql: true
 
 management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+  endpoint:
+    health:
+      show-details: always
+
+  metrics:
+    tags:
+      application: payment-service
   zipkin:
     tracing:
       endpoint: "http://localhost:9411/api/v2/spans" # zipkin에서 정해진 엔드포인트
@@ -47,3 +59,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
+
+
+logging:
+  loki:
+    url: ${LOKI_URL}
