chore: #319 Swagger 문서 경로 설정 추가
- Swagger UI 접속 경로: /swagger-ui.html로 명시
- OpenAPI 명세 경로: /v3/api-docs 고정

--- a/com.taken_seat.performance-service/src/main/resources/application.yml
+++ b/com.taken_seat.performance-service/src/main/resources/application.yml
@@ -59,14 +59,13 @@ eureka:
 common:
   trust-package: "com.taken_seat.common_service.message"
 
-
 logging:
   loki:
     url: ${LOKI_URL}
 
-
-# 로컬
-#eureka:
-#  client:
-#    register-with-eureka: false
-#    fetch-registry: false
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
