chore: #321 공연 티켓 정보 API 라우팅 경로 추가
- GET /api/v1/performencetickets/** 경로 Gateway 라우팅 설정에 추가

--- a/com.taken_seat.gateway-service/src/main/resources/application.yml
+++ b/com.taken_seat.gateway-service/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
         - id: performance-service
           uri: lb://performance-service
           predicates:
-            - Path=/api/v1/performances/**, /api/v1/performancehalls/**, /performance-service/v3/api-docs
+            - Path=/api/v1/performances/**, /api/v1/performancehalls/**, /api/v1/performencetickets/**, /performance-service/v3/api-docs
           filters:
             - RewritePath=/performance-service/(?<segment>.*), /$\{segment}
 
