--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -4,48 +4,17 @@ on:
     branches:
       - master
       - dev
+      - feature/#327
   pull_request:
     branches:
       - master
       - dev
 
 jobs:
-  eureka:
+  build:
+    name: Multi-Module Build
     runs-on: ubuntu-latest
-    steps:
-      - name: 소스 코드 체크아웃
-        uses: actions/checkout@v4
 
-      - name: JDK 17 설정
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Gradle 실행 권한 부여
-        run: chmod +x ./gradlew
-
-      - name: Eureka 서버 빌드
-        run: |
-          ./gradlew :com.taken_seat.eureka-service:bootJar
-
-
-  services:
-    runs-on: ubuntu-latest
-    needs: eureka  # Eureka가 실행된 후 실행
-    strategy:
-      matrix:
-        module:
-          - com.taken_seat.common-service
-          - com.taken_seat.auth-service
-          - com.taken_seat.coupon-service
-          - com.taken_seat.queue-service
-          - com.taken_seat.booking-service
-          - com.taken_seat.performance-service
-          - com.taken_seat.payment-service
-          - com.taken_seat.review-service
-      fail-fast: false
-      max-parallel: 5
 
     steps:
       - name: 소스 코드 체크아웃
@@ -69,24 +38,7 @@ jobs:
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
           echo "LOKI_URL=${{ secrets.LOKI_URL }}" >> $GITHUB_ENV
 
-      - name: Gradle 빌드 (서비스 모듈)
-        run: ./gradlew :${{ matrix.module }}:build --parallel --no-daemon
-
-  gateway:
-    runs-on: ubuntu-latest
-    needs: services  # 모든 서비스 모듈이 빌드된 후 실행
-    steps:
-      - name: 소스 코드 체크아웃
-        uses: actions/checkout@v4
-
-      - name: JDK 17 설정
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Gradle 실행 권한 부여
-        run: chmod +x ./gradlew
-
-      - name: Gradle 빌드 (Gateway)
-        run: ./gradlew :com.taken_seat.gateway-service:build --no-daemon
+      - name: 전체 모듈 빌드 (병렬 처리)
+        run: ./gradlew build --parallel --no-daemon
+          
+          
