--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -4,7 +4,6 @@ on:
     branches:
       - master
       - dev
-      - feature/#327
   pull_request:
     branches:
       - master
@@ -12,9 +11,23 @@ on:
 
 jobs:
   build:
-    name: Multi-Module Build
+    name: Multi-Module Build & Docker Push
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        module:
+          - com.taken_seat.eureka-service
+          - com.taken_seat.common-service
+          - com.taken_seat.auth-service
+          - com.taken_seat.coupon-service
+          - com.taken_seat.queue-service
+          - com.taken_seat.booking-service
+          - com.taken_seat.performance-service
+          - com.taken_seat.payment-service
+          - com.taken_seat.review-service
+          - com.taken_seat.gateway-service
+      fail-fast: false
+      max-parallel: 5
 
     steps:
       - name: 소스 코드 체크아웃
@@ -38,7 +51,16 @@ jobs:
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
           echo "LOKI_URL=${{ secrets.LOKI_URL }}" >> $GITHUB_ENV
 
-      - name: 전체 모듈 빌드 (병렬 처리)
-        run: ./gradlew build --parallel --no-daemon
-          
-          
+      - name: Gradle 빌드 (서비스 모듈)
+        run: ./gradlew :${{ matrix.module }}:build --parallel --no-daemon
+
+      - name: Docker 로그인 (GitHub Container Registry)
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.GITHUB_USERNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker 이미지 빌드 및 푸시
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}/$(basename ${GITHUB_WORKSPACE})-${{ matrix.module }}:latest .
+          docker push ghcr.io/${{ github.repository }}/$(basename ${GITHUB_WORKSPACE})-${{ matrix.module }}:latest
