--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -58,8 +58,8 @@ jobs:
       - name: Docker 로그인 (GitHub Container Registry)
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.GITHUB_USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.MY_GITHUB_USERNAME }}
+          password: ${{ secrets.MY_GITHUB_TOKEN }}
 
       - name: Docker 이미지 빌드 및 푸시
         run: |
