--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Docker 로그인 (GitHub Container Registry)
         uses: docker/login-action@v2
         with:
+          registry: ghcr.io
           username: ${{ secrets.MY_GITHUB_USERNAME }}
           password: ${{ secrets.MY_GITHUB_TOKEN }}
 
