--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -64,5 +64,8 @@ jobs:
 
       - name: Docker 이미지 빌드 및 푸시
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/$(basename ${GITHUB_WORKSPACE})-${{ matrix.module }}:latest .
-          docker push ghcr.io/${{ github.repository }}/$(basename ${GITHUB_WORKSPACE})-${{ matrix.module }}:latest
+          REPO_NAME=$(basename ${GITHUB_WORKSPACE} | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${REPO_NAME}-${{ matrix.module }}:latest
+
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
