--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -64,8 +64,9 @@ jobs:
 
       - name: Docker 이미지 빌드 및 푸시
         run: |
-          REPO_NAME=$(basename ${GITHUB_WORKSPACE} | tr '[:upper:]' '[:lower:]')
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${REPO_NAME}-${{ matrix.module }}:latest
+          ORG_NAME=taken_seat
+          MODULE_NAME=$(basename "${{ matrix.module }}" | tr '.' '-' | tr '_' '-')
+          IMAGE_NAME=ghcr.io/${ORG_NAME}/${MODULE_NAME}:latest
 
           docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
