--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -66,7 +66,8 @@ jobs:
         run: |
           ORG_NAME=taken_seat
           MODULE_NAME=$(basename "${{ matrix.module }}" | tr '.' '-' | tr '_' '-')
+          MODULE_PATH=${{ matrix.module }}
           IMAGE_NAME=ghcr.io/${ORG_NAME}/${MODULE_NAME}:latest
 
-          docker build -t $IMAGE_NAME .
+          docker build -t $IMAGE_NAME -f $MODULE_PATH/Dockerfile $MODULE_PATH
           docker push $IMAGE_NAME
