refactor : #327 DevOps CI 병렬 빌드 및 이미지 빌드 후 GHCR 이미지 푸시 테스트 7

--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Docker 이미지 빌드 및 푸시
         run: |
-          ORG_NAME=taken_seat
+          ORG_NAME=${{ secrets.MY_GITHUB_USERNAME }}  # GitHub 계정명
           MODULE_NAME=$(basename "${{ matrix.module }}" | tr '.' '-' | tr '_' '-')
           MODULE_PATH=${{ matrix.module }}
           IMAGE_NAME=ghcr.io/${ORG_NAME}/${MODULE_NAME}:latest
