--- a/.github/workflows/deploay.yml
+++ b/.github/workflows/deploay.yml
@@ -65,8 +65,12 @@ jobs:
       - name: Docker 이미지 빌드 및 푸시
         run: |
           ORG_NAME=${{ secrets.MY_GITHUB_USERNAME }}  # GitHub 계정명
-          MODULE_NAME=$(basename "${{ matrix.module }}" | tr '.' '-' | tr '_' '-'| tr '[:upper:]' '[:lower:]')  # 소문자로 변환
+          MODULE_NAME=$(basename "${{ matrix.module }}" | sed 's/com.taken_seat.//')  # com.taken_seat 부분을 제거
           MODULE_PATH=${{ matrix.module }}
+          
+          # 이미지 이름에서 하이픈을 언더스코어로 변환 (선택적)
+          MODULE_NAME=$(echo $MODULE_NAME | tr '-' '_')
+
           IMAGE_NAME=ghcr.io/${ORG_NAME}/${MODULE_NAME}:latest
 
           docker build -t $IMAGE_NAME -f $MODULE_PATH/Dockerfile $MODULE_PATH
