refactor : #332 <Auth> 만료된 accessToken을 재발급하는 기능
- 만료된 accessToken으로 요청을 했을 때 refreshToken이 존재한다면 accessToken을 재발급

--- a/com.taken_seat.auth-service/src/main/resources/application.yml
+++ b/com.taken_seat.auth-service/src/main/resources/application.yml
@@ -49,7 +49,7 @@ common:
 
 service:
   jwt:
-    access-expiration: 600000       # 10분
+    access-expiration: 10000      # 10초
     refresh-expiration: 3600000     # 1시간
     secret:
       key: ${JWT_SECRET}
