--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
-      username: default
-      password: systempass
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      username: ${REDIS_USERNAME}
+      password: ${REDIS_PASSWORD}
 
   datasource:
     url: ${SPRING_DATASOURCE_URL}
@@ -31,7 +31,7 @@ management:
       application: booking-service
   zipkin:
     tracing:
-      endpoint: "http://localhost:9411/api/v2/spans" # zipkin에서 정해진 엔드포인트
+      endpoint: ${ZIPKIN_ENDPOINT}
   tracing:
     sampling:
       probability: 1.0
@@ -39,7 +39,7 @@ management:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:19090/eureka/
+      defaultZone: ${EUREKA_DEFAULT_ZONE}
     register-with-eureka: true
     fetch-registry: true
 
