--- a/com.taken_seat.coupon-service/src/main/resources/application.yml
+++ b/com.taken_seat.coupon-service/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring:
     name: coupon-service
   data:
     redis:
-      host: localhost
-      port: 6379
-      username: default
-      password: systempass
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      username: ${REDIS_USERNAME}
+      password: ${REDIS_PASSWORD}
 
   datasource:
     url: ${SPRING_DATASOURCE_URL}
@@ -36,7 +36,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:19090/eureka/
+      defaultZone: ${EUREKA_DEFAULT_ZONE}
 
 springdoc:
   api-docs:
@@ -57,6 +57,12 @@ management:
   metrics:
     tags:
       application: coupon-service
+  zipkin:
+    tracing:
+      endpoint: ${ZIPKIN_ENDPOINT}
+  tracing:
+    sampling:
+      probability: 1.0
   endpoint:
     health:
       show-details: always
