--- a/com.taken_seat.queue-service/src/main/resources/application.yml
+++ b/com.taken_seat.queue-service/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
-      password: systempass
-
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      username: ${REDIS_USERNAME}
+      password: ${REDIS_PASSWORD}
 server:
   port: 19094
 
@@ -29,15 +29,21 @@ kafka:
 
 eureka:
   client:
+    service-url:
+      defaultZone: ${EUREKA_DEFAULT_ZONE}
     register-with-eureka: true
     fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:19090/eureka/
 
 management:
   metrics:
     tags:
       application: queue-service
+  zipkin:
+    tracing:
+      endpoint: ${ZIPKIN_ENDPOINT}
+  tracing:
+    sampling:
+      probability: 1.0
   endpoint:
     health:
       show-details: always
