feat : #349 DevOps 카프카 환경 변수 변경

--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -68,7 +68,9 @@ variable:
   booking-expiration-time: 600 # 초
 
 common:
-  trust-package: "com.taken_seat.common_service.message, com.taken_seat.booking_service.common.message"
+  kafka:
+    bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS}"
+  trust-package: "com.taken_seat.common_service.message"
 
 logging:
   loki:
