--- a/com.taken_seat.auth-service/src/main/resources/application.yml
+++ b/com.taken_seat.auth-service/src/main/resources/application.yml
@@ -45,6 +45,8 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_DEFAULT_ZONE}
 common:
+  kafka:
+    bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS}"
   trust-package: "com.taken_seat.common_service.message"
 
 service:
