--- a/com.taken_seat.coupon-service/src/main/resources/application.yml
+++ b/com.taken_seat.coupon-service/src/main/resources/application.yml
@@ -27,6 +27,8 @@ spring:
       data-locations: classpath:db/data.sql
 
 common:
+  kafka:
+    bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS}"
   trust-package: "com.taken_seat.common_service.message"
 
 
