--- a/com.taken_seat.queue-service/src/main/resources/application.yml
+++ b/com.taken_seat.queue-service/src/main/resources/application.yml
@@ -55,6 +55,8 @@ management:
         include: '*'
 
 common:
+  kafka:
+    bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS}"
   trust-package: "com.taken_seat.common_service.message"
 
 
