feat: #357 대기열 kafka 이벤트 연결 - 예매에서 보낸 kafka 메시지 처리 - yml 파일 변경 - kafkaConsumer 추가 - service 코드 리팩토링

--- a/com.taken_seat.queue-service/src/main/resources/application.yml
+++ b/com.taken_seat.queue-service/src/main/resources/application.yml
@@ -23,8 +23,13 @@ service:
 
 kafka:
   topic:
-    queue-request: waitingQueue.request
-    queue-result: waitingQueue.request
+    queue-request: waitingQueue.exit.request
+    queue-response: waitingQueue.exit.response
+    booking-request: waitingQueue.enter.request
+    booking-response: waitingQueue.enter.response
+  consumer:
+    group-id: waitingQueue
+
 
 
 eureka:
