refactor : #393 <Auth> 코드 리팩토링
- 조회 기능에 MapStruct 추가해서 v1, v2 성능 테스트 진행
- 유저 상세 조회를 시도한 데이터가 Redis 캐시에 담겨서 마일리지, 쿠폰에 업데이트가 발생해도 캐시에 담긴 데이터를 조회하는 문제가 발생
- 마일리지 생성, 쿠폰 생성 시점에 캐시를 지워서 해결
- v2 경로가 gateway와 security에 적용되지 않아서 404 에러가 뜨는 것을 해결

--- a/com.taken_seat.gateway-service/src/main/resources/application.yml
+++ b/com.taken_seat.gateway-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Path=/api/v1/auths/**, /api/v1/users/**, /auth-service/v3/api-docs
+            - Path=/api/v1/auths/**, /api/v1/users/**, /api/v2/users/**, /auth-service/v3/api-docs
           filters:
             - RewritePath=/auth-service/(?<segment>.*), /$\{segment}
 
