feat : #397 Review MapStruct 의존성 추가

--- a/com.taken_seat.review-service/build.gradle
+++ b/com.taken_seat.review-service/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // mapStruct
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+
     // MySQL 드라이버
     runtimeOnly 'com.mysql:mysql-connector-j'
 
