feat: #436 Kafka DLQ 재시도 정책 환경 변수 추가
- performance.kafka.dlq.retry-interval-ms 설정 추가 (재시도 간격)
- performance.kafka.dlq.max-attempts 설정 추가 (최대 재시도 횟수)

--- a/com.taken_seat.performance-service/src/main/resources/application.yml
+++ b/com.taken_seat.performance-service/src/main/resources/application.yml
@@ -75,3 +75,9 @@ springdoc:
 variable:
   lock-wait-time: 3 # 초
   lock-lease-time: 5 # 초
+
+performance:
+  kafka:
+    dlq:
+      retry-interval-ms: 0
+      max-attempts: 3
