chore:  application.yml에 메트릭 태그(service) 추가

--- a/com.taken_seat.common-service/src/main/resources/application.yml
+++ b/com.taken_seat.common-service/src/main/resources/application.yml
@@ -8,3 +8,8 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+
+management:
+  metrics:
+    tags:
+      service: ${spring.application.name}
