fix : #487 <Auth> 결제 -> 예매 -> 유저 이벤트 흐름 리팩토링

--- a/com.taken_seat.auth-service/src/main/resources/application.yml
+++ b/com.taken_seat.auth-service/src/main/resources/application.yml
@@ -35,6 +35,7 @@ kafka:
     coupon-response-user: coupon.response.user
     benefit-usage-request: benefit.usage.request
     benefit-refund-request: benefit.refund.request
+    benefit-refund-response: benefit.refund.response
   consumer:
     group-id: auth-service
 
