refactor: #476 <Booking> 결제 시도 QueryService 에서 담당

--- a/com.taken_seat.booking-service/src/main/resources/application.yml
+++ b/com.taken_seat.booking-service/src/main/resources/application.yml
@@ -57,6 +57,8 @@ kafka:
     booking-completed: booking.completed.v1
     booking-created: booking.created
     booking-expire: booking.expire
+    booking-payment-completed: booking.payment.completed
+    booking-payment-request: booking.payment.request
     booking-updated: booking.updated
     payment-refund-request: payment.refund.request
     payment-refund-response: payment.refund.response
